--- a/project1-frontend/src/App.css
+++ b/project1-frontend/src/App.css
@@ -11,3 +11,25 @@
   box-shadow: 2px 2px 2px rgb(0, 0, 100);
   cursor: pointer;
 }
+
+.grid-container div{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  height: auto;
+  width: auto;  
+  margin: 5px;
+  background-color: rgb(230, 230, 230);
+  padding: 5px;
+  border: 1px solid black;
+  color: rgb(26, 26, 26);
+  cursor: pointer;
+}
+
+.grid-item div{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 15px;
+  text-align: center;  
+}
+
